<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailNewsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_artikel"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/tv_judul_artikel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_primary"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_artikel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fab" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_judul_artikel" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/menu_favorite"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="@+id/iv_artikel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_artikel"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <Button
            android:id="@+id/btn_web_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_web_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_description"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>